# cryptopix-clwe

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  MIGRATION.md  PUBLISH_GUIDE.md  README.md  benchmark_color_kem_timing.cpp  conanfile.py  demo_kem.cpp
.github/workflows/: ci.yml
cmake/: CLWEConfig.cmake.in  CLWEConfigVersion.cmake.in  clwe.pc.in
docs/: API_REFERENCE.md  BENCHMARKS.md  BUILD_GUIDE.md  MACBOOK_M4_NOTES.md  SECURITY_ANALYSIS.md  TECHNICAL_SPEC.md  USAGE_GUIDE.md  architecture.md
scripts/: build.sh  release.sh  test_packages.sh
src/core/: color_kem.cpp  color_kem.hpp  color_ntt_engine.cpp  color_ntt_engine.hpp  color_value.cpp  color_value.hpp  cpu_features.cpp  cpu_features.hpp  ntt_avx.cpp  ntt_avx.hpp  ntt_engine.cpp  ntt_engine.hpp  ntt_neon.cpp  ntt_neon.hpp  ntt_rvv.cpp  ntt_rvv.hpp  ntt_scalar.cpp  ntt_scalar.hpp  ntt_vsx.hpp  parameters.cpp  polynomial.cpp  polynomial.hpp  ring_operations.cpp  sampling.cpp  sampling.hpp  shake_sampler.cpp  shake_sampler.hpp  utils.cpp  utils.hpp
src/include/clwe/: clwe.hpp  kem.hpp  ring_operations.hpp  sign.hpp
vcpkg/ports/clwe/: portfile.cmake  usage  vcpkg.json
